hphp/test/zend/bad/ext/gd/tests/imagefilter_error20.php
<?php
$image = tmpfile();

var_dump(imagefilter($image, IMG_FILTER_BRIGHTNESS, 1));
?>